fix first screenshot on small screens+ data sending

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -451,7 +451,7 @@ nav > ul li a:active {
 	}
 
 	.appDescriptionContainer {
-		font-size: 3.7rem;
+		font-size: 3.3rem;
 	}
 }
 
@@ -688,7 +688,7 @@ footer {
 	width: 100%;
 	text-align: center;
 	padding-top: 70px;
-	// padding-bottom: 70px;
+	font-size: 1.5rem;
 }
 
 .footerIcons {
@@ -746,26 +746,24 @@ footer {
 		margin: 10% auto
 	}
 
-	.iphonePreview
+	// .iphonePreview
+	// {
+	// 	// display: none;
+	// }
+
+	.imageWrapper
 	{
-		display: none;
+		height: 1299px;
 	}
 }
 
 @media only screen and (max-width: 992px) {
 	
 	.footerText {
-		color: $footer-text-color;
-		display: block;
-		line-height: 1.5;
-		width: 100%;
-		text-align: center;
 		padding-top: 54px;
-		// padding-bottom: 61px;
 	}
 	
 	.footerIcons {
-		// padding-bottom: 70px;
 		display: flex;
 	}
 	
